--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -12,7 +12,7 @@ margin: 0 auto;
         width: 768px;
 }
 @media screen and (min-width: 1200px) {
-        width: 1200px;
+        width: 100%;
 }
 }
 .header__container {
